<resources>
    <string name="app_name">DayPlanner</string>
    <string name="my_events">My Events</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtNewEvent">Add New Event</string>
    <string name="hntName">Event Name</string>
    <string name="hntDate">Event Date</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnAdd">Add</string>
</resources>